--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
       
       <!-- Middle Section -->
       <section class="middle-section">
-        <img class="bg-image" src="../images/jojo.jpg" alt="Jojo Image" />
+        <img class="bg-image" src="images/jojo.jpg" alt="Jojo Image" />
         <nav class="navbar-container">
           <ul class="navbar">
             <li><a href="index.html">Home</a></li>
