--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/styles.css" />
-  <title>Lab 1</title>
+  <link rel="stylesheet" href="../styles/styles.css" />
+  <title>Document</title>
 </head>
 <body>
   <div class="page-layout">
@@ -32,7 +32,7 @@
       
       <!-- Middle Section -->
       <section class="middle-section">
-        <img class="bg-image" src="images/jojo.jpg" alt="Jojo Image" />
+        <img class="bg-image" src="../images/jojo.jpg" alt="Jojo Image" />
         <nav class="navbar-container">
           <ul class="navbar">
             <li><a href="index.html">Home</a></li>
