--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="bg-image" src="images/jojo.jpg" alt="Jojo Image" usemap="#jojoMap" />
           
           <map name="jojoMap">
-            <area shape="rect" coords="0,0,1024,500" href="https://yourlink.com" alt="Clickable Image" />
+            <area shape="rect" coords="0,0,1024,500" href="https://uakino.me/animeukr/anime-series/13739-himern-prigodi-dzhodzho-zolotiy-vter-6-sezon.html" alt="Clickable Image" />
           </map>
         </div>
         <nav class="navbar-container">
